Release 1.12.0